.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0a2 - Unreleased
------------------

- RegistrationTool's registeredNotify now sends mail immediately instead of
  waiting until the end of the transaction. This puts the function back in
  line with the way the method worked in previous versions of Plone. 
  http://dev.plone.org/plone/ticket/9871
  [esteele]

- Create normal folders instead of Large Folders (which are deprecated)
  for the initial example content.  All folders are now BTree-based.
  [davisagli]

- fixed validation of prefs_main_template for plonetheme.classic
  [spliter]

- re-applied fix for plone.css by aaronv. Fixes #9366 and #9761
  [spliter]

- moved plone.css.py to CMFPlone in order to share it among all themes
  http://dev.plone.org/plone/ticket/9366
  [spliter]

- moved "Manage portlets" fallback link out of main_template to 
  plone.manage_portlets_fallback viewlet
  http://dev.plone.org/plone/ticket/9808
  [spliter]

- Point the "Join" action the newly-renamed @@register view.
  [esteele]

- Remove ``calendarpopup.js`` from jsregistry.xml. It no longer exists.
  [hannosch]

- Depend on ``plone.app.upgrade`` so it gets installed by default. Keeping
  the upgrade package separate only made sense when it had massively more
  dependencies than Plone itself. That cleanup isn't part of Plone 4.0.
  [hannosch]

- Added back an ``utranslate`` function to the i18nl10n module that retains the
  old call signature.
  [hannosch]

4.0a1 - 2009-11-19
------------------

- Moved ``Image Handling`` control panel into the main Plone category. It's not
  an add-on anymore.
  [hannosch]

- Clarified the default labels shown on the site setup overview page.
  [hannosch]

- Adjust tests to new Archetypes behavior, which respects the default language
  of the portal_languages tool.
  [hannosch]
