@@ -8,6 +8,10 @@ Changelog
 4.0a2 - Unreleased
 ------------------
 
+- Respect multibyte language delimiter in search field. This closes
+  http://dev.plone.org/plone/ticket/9422.
+  [hannosch]
+
 - RegistrationTool's registeredNotify now sends mail immediately instead of
   waiting until the end of the transaction. This puts the function back in
   line with the way the method worked in previous versions of Plone. 
